<resources>
    <string name="app_name">GymkhanaChain</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_create_gymk">CreateGymkActivity</string>
    <string name="create_gymk">Crear nueva gymkhana</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Ajustes</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="drawer_open">Abrir</string>
    <string name="drawer_close">Cerrar</string>
    <string name="bt_activate">Activar</string>
    <string name="bt_delete">Borrar</string>
    <string name="bt_accept">Aceptar</string>
    <string name="bt_save">Guardar</string>
    <string name="bt_report">Reportar</string>
    <string name="imview_gymk_description">Imagen de gymkhanaBean</string>
    <string name="et_gymk_name">Nombre gymkhanaBean</string>
    <string name="et_gymk_desc">Descripción gymkhanaBean</string>
    <string name="tv_gymk_type">Tipo de gymkhanaBean</string>
    <string name="sw_accessibility">Accesibilidad</string>
    <string name="imb_edit_gymk_img">Editar imagen de gymkhanaBean</string>
    <string name="title_activity_user_profile">Perfil de usuario</string>
    <string name="nav_start">Inicio</string>
    <string name="nav_advanced_search">Búsqueda avanzada</string>
    <string name="nav_saved_gymk">Gymkhanas guardadas</string>
    <string name="nav_done_gymk">Gymkhanas completadas</string>
    <string name="nav_my_gymk">Mis gymkhanas</string>
    <string name="nav_create_gymk">Crear gymkhana</string>
    <string name="nav_profile">Perfil</string>
    <string name="nav_settings">Ajustes</string>
    <string name="double_tap_exit_app">Doble click para salir de la aplicación</string>
    <string name="correct_answer">¡Correcto!</string>
    <string name="wrong_answer">¡Lo sentimos! La respuesta correcta era </string>
    <string name="gymkhana_complete">¡Has completado la gymkhana! Esperamos que te lo hayas pasado bien</string>

    <array name="drawer_items">
        <item>Inicio</item>
        <item>Mis gymkhanas</item>
        <item>Ajustes</item>
        <item>Perfil</item>

    </array>

    <array name="gymk_types">
        <item>Puntos ordenados</item>
        <item>Puntos no ordenados</item>
        <item>Libre</item>
    </array>
    <string name="location_dialog_title">Localización</string>
    <string name="location_dialog_content">Esta aplicación necesita conocer tu posición en todo momento. Acepte el permiso para continuar</string>
    <string name="toast_no_location">Debes permitir el uso de la localización para usar GymkhanaChain</string>
    <string name="common_reject">No</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="toast_no_login">Es necesario iniciar sesión para poder utilizar GymkhanaChain. Hasta la próxima</string>
    <string name="common_accept">Aceptar</string>
    <string name="title_activity_point">PointActivity</string>
    <string name="title_activity_settings">Ajustes</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Nombre de usuario</string>
    <string name="pref_default_display_name">kombuchis</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_location">Localización</string>

    <string name="pref_title_location_mode">Modo de localización</string>
    <string-array name="pref_location_mode_entries">
        <item>Alta precisión</item>
        <item>Ahorro de batería</item>
        <item>Sólo dispositivo</item>
    </string-array>
    <string-array name="pref_location_mode_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notificaciones</string>

    <string name="pref_title_activate_notifications">Activar notificaciones</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibración</string>
    <string name="user_profile">Perfil de usuario</string>
    <string name="nav_config">Configuración</string>
    <string name="start_gymkhana">Múevete al punto inicial para empezar la gymkhana</string>

    <string name="pref_header_appearance">Apariencia</string>
    <string name="pref_title_activate_dark_theme">Cambiar a tema oscuro</string>
    <string name="pref_title_map_theme">Cambiar colores del mapa</string>
    <string-array name="pref_map_theme_entries">
        <item>Por defecto</item>
        <item>Modo retro</item>
        <item>Escala de grises</item>
        <item>Modo nocturno</item>
        <item>Oscuro</item>
    </string-array>
    <string-array name="pref_map_theme_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <string name="pref_show_profile_img">Mostrar imagen de perfil</string>
    <string name="pref_logout">Cerrar sesión</string>
    <string name="pref_toggle_theme_restart_app">Reinicia la apliación para que se apliquen todos los cambios</string>
    <string name="profile_captured_points">Puntos capturados</string>
    <string name="profile_gymkanas">Gymkanas</string>
    <string name="profile_achievements">Logros</string>
    <string name="profile_user_location">User location</string>
    <string name="profile_user_level">User Level</string>

</resources>
