<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
        style="@style/PrefIcon"
        android:fragment="com.gymkhanachain.app.SettingsActivity$GeneralPreferenceFragment"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/pref_header_general" />

    <header
        style="@style/PrefIcon"
        android:fragment="com.gymkhanachain.app.SettingsActivity$LocationPreferenceFragment"
        android:icon="@drawable/ic_round_my_location"
        android:title="@string/pref_header_location"
        />

    <header
        style="@style/PrefIcon"
        android:fragment="com.gymkhanachain.app.SettingsActivity$NotificationPreferenceFragment"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/pref_header_notifications" />

    <header
        style="@style/PrefIcon"
        android:fragment="com.gymkhanachain.app.SettingsActivity$AppearancePreferenceFragment"
        android:icon="@drawable/ic_outline_color_lens_24px"
        android:title="@string/pref_header_appearance" />

</preference-headers>
